--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 			<section class="docs-section" id="item-1-2">
 				<div class="simplelightbox-gallery row mb-2">
 					<div class="col-12 col-md-6 mb-2">
-						<a href="assets/images/doozer-test.png"><img class="figure-img img-fluid shadow rounded h450" src="assets/images/doozer-test.png" alt="" title="Doozer Test Case example"/></a>
+						<a href="assets/images/doozer-test.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/doozer-test.png" alt="" title="Doozer Test Case example"/></a>
 					</div>
 					<div class="col-12 col-md-6 mb-2">
-						<a href="assets/images/doozer-test-report.png"><img class="figure-img img-fluid shadow rounded h450" src="assets/images/doozer-test-report.png" alt="" title="Doozer Test Case Report page"/></a>
+						<a href="assets/images/doozer-test-report.png"><img class="figure-img img-fluid shadow rounded" src="assets/images/doozer-test-report.png" alt="" title="Doozer Test Case Report page"/></a>
 					</div><!--//col-->
 				</div><!--//gallery-->
 			</section>
