--- a/docs-page.html
+++ b/docs-page.html
@@ -161,6 +161,14 @@
 					<li class="nav-item section-title mt-3"><a class="nav-link scrollto"
 							href="#section-7"><span class="theme-icon-holder me-2"><i
 									class="fas fa-info-circle"></i></span>About</a></li>
+					<li class="nav-item section-title mt-3"><a class="nav-link"
+							href="https://github.com/mkgiepard/doozer/issues/new" target="_blank">
+							<span class="theme-icon-holder me-2">
+								<i class="fas fa-bug"></i></span>Report Issue</a></li>
+					<li class="nav-item section-title mt-3"><a class="nav-link"
+							href="https://github.com/mkgiepard/doozer/discussions/new?category=q-a" target="_blank">
+							<span class="theme-icon-holder me-2">
+								<i class="fa fa-comments"></i></span>Send Feedback</a></li>
 				</ul>
 
 			</nav><!--//docs-nav-->
@@ -1079,7 +1087,8 @@ Usage with positional parameters:
 								your control, such as promotional banners. By appending a question
 								mark (?) to the end of an action name, you mark it as optional. The
 								action will still be executed during the test, but the test will not
-								fail if the action encounters an error. Any failures will be logged with
+								fail if the action encounters an error. Any failures will be logged
+								with
 								a notice, indicating that the error did not halt the test execution.
 							</p>
 							<div class="docs-code-block">
