new> bugreport/comment links in the header of index and docs pages

--- a/docs-page.html
+++ b/docs-page.html
@@ -77,6 +77,8 @@
 									class="fab fa-twitter fa-fw"></i></a></li>
 						<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i
 									class="fas fa-contact-card fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer/issues/new" target="_blank">
+							<i class="fas fa-bug"></i></a></li>
 						<li class="list-inline-item"><a	href="https://github.com/mkgiepard/doozer/discussions/new?category=q-a" target="_blank">
 							<i class="fa fa-comments"></i></a></li>
 					</ul><!--//social-list-->
