--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li>
 			            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
 						<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer/issues/new" target="_blank">
+							<i class="fas fa-bug"></i></a></li>
+						<li class="list-inline-item"><a	href="https://github.com/mkgiepard/doozer/discussions/new?category=q-a" target="_blank">
+							<i class="fa fa-comments"></i></a></li>
 		            </ul><!--//social-list-->
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
