new> show quickaccess button on mobile

--- a/index.html
+++ b/index.html
@@ -55,14 +55,9 @@
                 </div><!--//docs-logo-wrapper-->
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
-					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
-						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li>
+					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-lg-flex">
 			            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
 						<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
-						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer/issues/new" target="_blank">
-							<i class="fas fa-bug"></i></a></li>
-						<li class="list-inline-item"><a	href="https://github.com/mkgiepard/doozer/discussions/new?category=q-a" target="_blank">
-							<i class="fa fa-comments"></i></a></li>
 		            </ul><!--//social-list-->
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
@@ -220,6 +215,10 @@
 			    <li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li> 
 	            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
 				<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
+				<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer/issues/new" target="_blank">
+					<i class="fas fa-bug"></i></a></li>
+				<li class="list-inline-item"><a	href="https://github.com/mkgiepard/doozer/discussions/new?category=q-a" target="_blank">
+					<i class="fa fa-comments"></i></a></li>
 	        </ul><!--//social-list-->
 	        
 	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
