refactor> include only fontawesome icons that are being used on the pages

--- a/docs-page.html
+++ b/docs-page.html
@@ -17,7 +17,7 @@
 		rel="stylesheet">
 
 	<!-- FontAwesome JS-->
-	<script defer src="assets/fontawesome/js/all.min.js"></script>
+	<script defer src="assets/fontawesome/js/fa-doozer.js"></script>
 
 	<!-- Plugins CSS -->
 	<link rel="stylesheet"
