upd> change the css of selects

--- a/test-pages/select.html
+++ b/test-pages/select.html
@@ -23,6 +23,11 @@
             font-size: xx-large;
             margin-left: 12px;
             margin-right: 12px;
+            min-width: 360px;
+        }
+        #multi {
+            min-height: 200px;
+            overflow: auto;
         }
     </style>
 </head>
